; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_trace_sched_wakeup.c___trace_function.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_trace_sched_wakeup.c___trace_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_array = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.trace_array*, i64, i64, i64, i32)* @__trace_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__trace_function(%struct.trace_array* %0, i64 %1, i64 %2, i64 %3, i32 %4) #0 {
  %6 = alloca %struct.trace_array*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.trace_array* %0, %struct.trace_array** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load %struct.trace_array*, %struct.trace_array** %6, align 8
  %12 = call i64 @is_graph(%struct.trace_array* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %5
  %15 = load %struct.trace_array*, %struct.trace_array** %6, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* %8, align 8
  %18 = load i64, i64* %9, align 8
  %19 = load i32, i32* %10, align 4
  %20 = call i32 @trace_graph_function(%struct.trace_array* %15, i64 %16, i64 %17, i64 %18, i32 %19)
  br label %28

21:                                               ; preds = %5
  %22 = load %struct.trace_array*, %struct.trace_array** %6, align 8
  %23 = load i64, i64* %7, align 8
  %24 = load i64, i64* %8, align 8
  %25 = load i64, i64* %9, align 8
  %26 = load i32, i32* %10, align 4
  %27 = call i32 @trace_function(%struct.trace_array* %22, i64 %23, i64 %24, i64 %25, i32 %26)
  br label %28

28:                                               ; preds = %21, %14
  ret void
}

declare dso_local i64 @is_graph(%struct.trace_array*) #1

declare dso_local i32 @trace_graph_function(%struct.trace_array*, i64, i64, i64, i32) #1

declare dso_local i32 @trace_function(%struct.trace_array*, i64, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
